# Information-Retrieval-BD2

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  README.md  apprunner.json  config.py  datatest.csv.processed  deploy.sh  main.py  pyproject.toml  requirements.txt  run.sh  run_server.bash  temp.py
0_blocks/: 1.block  2.block  3.block  4.block
1_blocks/: 1.block  2.block  3.block  4.block
AudioRecognition/: main.py
CSV/: split.py  spotify_songs.csv.position  test.csv  test.csv.position  test.csv.processed
CSV/spotify_songs/: file_1.csv  file_10.csv  file_11.csv  file_12.csv  file_13.csv  file_14.csv  file_15.csv  file_16.csv  file_17.csv  file_18.csv  file_19.csv  file_19.csv.position  file_19.csv.processed  file_2.csv  file_3.csv  file_4.csv  file_5.csv  file_6.csv  file_7.csv  file_8.csv  file_9.csv
Embeddings/: Download.py  Embed.py  UmapEmbedding.py  build.zig  main.py
Embeddings/src/: Download.zig  constants.zig  main.zig
InvertedIndex/: _.py  index.py  preprocessor.py  spimi_invert.py  test_mock.py  util.py
InvertedIndex/mock_blocks/: 1.block  2.block  3.block  block4.pickle
Postgres/: create_index.sh  create_index.sql  create_table.sh  create_table.sql  populate.sh  setup_db.sh
experiments/Btree/: read.py  write.py
experiments/Downloader/: main.py
experiments/Espectrogram/: main.py
experiments/Features/: features.py  read.py  temp.py  tmp2.py
experiments/Hash/: read.py  (+1 more)
scripts/: clean.sh  deploy.sh  run_test.bash  setup.bash
src/: api.py  db.py  info.py  lyrics.py  main.py  song_index.py
tests/: test_InvertedIndex.py
(+22 files in other folders)
